<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    android:gravity="center_vertical|center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pub.assignment.MainActivity">


    <EditText
        android:id="@+id/editText_mainActivity_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorwhite"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText2_mainActivity_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_mainActivity_email"
        android:layout_below="@+id/editText_mainActivity_email"
        android:layout_marginTop="22dp"
        android:background="@color/colorwhite"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_mainActivity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2_mainActivity_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/colorLightwhite"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/textView_mainActivity_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_mainActivity_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/not_a_member_sign_up_now"
        android:textColor="@color/colorLightwhite"
        android:textColorHighlight="@color/colorAccent"
        android:textColorLink="#ffe83b"
        android:textSize="18sp" />
</RelativeLayout>
